--- a/package.json
+++ b/package.json
@@ -8,12 +8,8 @@
     "start": "bun run ./root/index.ts"
   },
   "devDependencies": {
-    "@whiskeysockets/baileys": "latest",
     "bun-types": "latest",
-    "dotenv": "latest",
-    "mongodb": "latest",
-    "mongoose": "latest",
-    "qrcode-terminal": "latest",
+    "express": "latest",
     "typescript": "latest"
   },
   "author": "ahmad bni rusli",
